Attempt to configure SSSD-AD for the client
* Doesn't work for now, can't join realm

--- a/src/config.local.sh.sample
+++ b/src/config.local.sh.sample
@@ -2,3 +2,6 @@
 VERSION=""
 # Set a password, also used in GRUB. Otherwise we'll default to ansible.
 SUPER_PASSWD=""
+
+# Password for realm
+REALM_PASSWD=""
