--- a/src/config.sh.sample
+++ b/src/config.sh.sample
@@ -1,5 +1,4 @@
-POP_SERVER="pop.toki.id"
-BACKUP_SERVER="backup.toki.id"
-CMS_PUBLIC_DOMAIN="cms.toki.id"
-DNS_DOMAIN="toki.id"
-SUBNET="10.0.0.0/16"
+DNS_DOMAIN="vnoi.info"
+WEBSERVER_PUBLIC_DOMAIN="cup.vnoi.info"
+AUTH_ADDRESS="auth-cup.vnoi.info"
+SUBNET="10.1.0.0/24"
