--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Build image
         run: sudo ./build.sh build
 
+      - name: Out
+        run: cat src/config.sh
+
       - name: Create Release
         uses: actions/create-release@v1
         env:
