Local config to rl

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -62,4 +62,5 @@ jobs:
       - name: Upload ISO
         uses: softprops/action-gh-release@v1
         with:
-          files: live-build/contestant.iso
+          # files: live-build/contestant.iso
+          files: local_config.sh
