--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -60,7 +60,7 @@ jobs:
           prerelease: false
       
       - name: Split ISO
-        run: split -b 2000MB live-build/contestant.iso iso-parts/cts/contestant
+        run: mkdir iso-parts; split -b 2000MB live-build/contestant.iso iso-parts/contestant
 
       - name: Upload ISO
         uses: softprops/action-gh-release@v1
