--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -46,8 +46,8 @@ jobs:
           CONTENT: ${{ secrets.CONFIG_SH }}
           FILENAME: src/config.sh
 
-      - name: Build image
-        run: sudo ./build.sh build
+      # - name: Build image
+        # run: sudo ./build.sh build
 
       - name: Create Release
         uses: actions/create-release@v1
