--- a/src/config.local.sh.sample
+++ b/src/config.local.sh.sample
@@ -1,4 +1,8 @@
 # Name the version. Otherwise we'll default to testMMDD.
 VERSION=""
+
 # Set a password, also used in GRUB. Otherwise we'll default to ansible.
 SUPER_PASSWD=""
+
+# IP of central server
+CENTRAL_SERVER_IP=""
