--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -57,7 +57,7 @@ jobs:
           FILENAME: src/config.sh
 
       - name: Build image
-        run: sudo ./build.sh icpc_build
+        run: sudo ./build.sh icpc_build --github-actions
 
       # ----------------------- #
       # Push to Github Releases #
