Fix and split workflows

--- a/.github/workflows/push-releases.yml
+++ b/.github/workflows/push-releases.yml
@@ -1,4 +1,4 @@
-name: Build ISO Image
+name: Build ISO Image (Releases)
 
 # Avoids having multiple instances running
 concurrency:
@@ -8,16 +8,7 @@ concurrency:
 on:
   push:
     tags:
-      - "v*"
-  workflow_dispatch:
-    inputs:
-      generate_iso:
-        description: 'Choose generated ISO file storage location'
-        required: false
-        type: choice
-        options:
-          - 'server'
-          - 'release'
+      - 'v*'
 
 env:
   image_name: "VNOI Ubuntu ${{ github.ref }}"
@@ -54,19 +45,12 @@ jobs:
         env:
           CONTENT: ${{ secrets.SRC_CONFIG_SH }}
           FILENAME: src/config.sh
-        
-      - name: Display directory structure
-        run: find . -not -path '*/\.*'
 
       - name: Build image
         run: sudo ./build.sh icpc_build --github-actions
 
-      # ----------------------- #
-      # Push to Github Releases #
-      # ----------------------- #
       - name: Create Release
         uses: actions/create-release@v1
-        if: ${{ github.event.inputs.generate_iso == 'release' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -74,29 +58,11 @@ jobs:
           release_name: ${{ env.image_name }}
           draft: false
           prerelease: false
-
+      
       - name: Split ISO
-        if: ${{ github.event.inputs.generate_iso == 'release' }}
-        run: then mkdir iso-parts; split -b 2000MB live-build/contestant.iso iso-parts/contestant
+        run: mkdir iso-parts; split -b 2000MB live-build/contestant.iso iso-parts/contestant
 
       - name: Upload ISO
-        if: ${{ github.event.inputs.generate_iso == 'release' }}
         uses: softprops/action-gh-release@v1
         with:
           files: iso-parts/contestant*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # ----------------------- #
-      #     Push to Server      #
-      # ----------------------- #
-      - name: Push to Server
-        if: ${{ github.event.inputs.generate_iso == 'server' }}
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.SCP_HOST }}
-          username: ${{ secrets.SCP_USERNAME }}
-          key: ${{ secrets.SCP_KEY }}
-          port: ${{ secrets.SCP_PORT }}
-          source: live-build/contestant.iso
-          target: ${{ secrets.SCP_TARGET }}
