change src to image-toolkit

--- a/.github/workflows/push-self-hosted-runner.yml
+++ b/.github/workflows/push-self-hosted-runner.yml
@@ -24,7 +24,7 @@ jobs:
         run: echo $CONTENT | base64 -d > $FILENAME
         env:
           CONTENT: ${{ secrets.AUTHORIZED_KEYS }}
-          FILENAME: src/misc/authorized_keys
+          FILENAME: image-toolkit/misc/authorized_keys
 
       - name: Write config.local.sh
         run: echo $CONTENT | base64 -d > $FILENAME
@@ -32,17 +32,17 @@ jobs:
           CONTENT: ${{ secrets.CONFIG_LOCAL_SH }}
           FILENAME: config.local.sh
 
-      - name: Write src/config.local.sh
+      - name: Write image-toolkit/config.local.sh
         run: echo $CONTENT | base64 -d > $FILENAME
         env:
           CONTENT: ${{ secrets.SRC_CONFIG_LOCAL_SH }}
-          FILENAME: src/config.local.sh
+          FILENAME: image-toolkit/config.local.sh
 
-      - name: Write src/config.sh
+      - name: Write image-toolkit/config.sh
         run: echo $CONTENT | base64 -d > $FILENAME
         env:
           CONTENT: ${{ secrets.SRC_CONFIG_SH }}
-          FILENAME: src/config.sh
+          FILENAME: image-toolkit/config.sh
 
       - name: Build image
         run: sudo ./build.sh icpc_build --github-actions
