--- a/image-toolkit/config.sh.sample
+++ b/image-toolkit/config.sh.sample
@@ -12,3 +12,8 @@ CONTEST_SITE_DOMAIN_NAME=""  # Example: contest.icpc.info
 
 ADMIN_SUBNET="10.1.0.0/16"
 COACH_SUBNET="10.20.0.0/16"
+
+# Name of the audio device used for streaming (Example: "Intel 82801AA-ICH - MIC ADC")
+# "any" will be the first available hardware capture device
+# "system" will be the default device of the system
+AUDIO_DEVICE_NAME="any"
