fix: use different tmp path for gh workflows scp actions

--- a/.github/workflows/push-self-hosted-storage.yml
+++ b/.github/workflows/push-self-hosted-storage.yml
@@ -60,3 +60,4 @@ jobs:
           port: ${{ secrets.SCP_PORT }}
           source: live-build/contestant.iso
           target: ${{ secrets.SCP_TARGET }}
+          tar_tmp_path: live-build/
