fix: please fix this scp madness

--- a/.github/workflows/push-self-hosted-storage.yml
+++ b/.github/workflows/push-self-hosted-storage.yml
@@ -51,12 +51,6 @@ jobs:
       - name: Build image
         run: sudo ./build.sh icpc_build --github-actions
 
-      - name: Write secret key
-        run: echo $CONTENT | base64 -d > $FILENAME
-        env:
-          CONTENT: ${{ secrets.SCP_KEY }}
-          FILENAME: scp_key
-
       # - name: Push to Server
       #   uses: appleboy/scp-action@v0.1.7
       #   with:
@@ -69,6 +63,11 @@ jobs:
       #     tar_tmp_path: live-build/
 
       - name: Push to Server
-        run: |
-          scp -i scp_key live-build/contestant.iso \
-          ${{ secrets.SCP_USERNAME }}@${{ secrets.SCP_HOST }}:${{ secrets.SCP_TARGET }}
+        uses: nogsantos/scp-deploy@master
+        with:
+          src: live-build/contestant.iso
+          host: ${{ secrets.SCP_HOST }}
+          remote: ${{ secrets.SCP_TARGET }}
+          port: ${{ secrets.SCP_PORT }}
+          user: ${{ secrets.SCP_USERNAME }}
+          key: ${{ secrets.SCP_KEY }}
