Add webcam streaming (#34)
* Add webcam streaming

* test: webcam streaming

* feat: remove webcam local recording

* feat: reduce webcam streaming resolution to 720p

* fix: ffmpeg record use port 101 from vlc

* fix(dev_env): use xhci (usb 3.0)

* fix: handle device disconnect

* fix: use udevadm to monitor webcam events

* fix(startup.sh): vlc spelling

* feat: include input audio in webcam streaming

* fix: Set webcam keyframe interval to 15 fps

Using fixed keyframe interval significantly reduce stream latency and reduce *.ts fragment file size.

* fix(startup.sh): move udevadm up before vlc to avoid missing video device remove event

* feat(startup.sh): wait kills udevadm and cvlc only if terminated instead of status change

* feat(startup.sh): udevadm specify video device

* feat(startup.sh): prevent cpu hogging when video device not present and print debug

* feat(startup.sh): kill -9 if cvlc fails to exit

* fix(startup.sh): let kill terminate with exit code because we're not using exit on error

* feat(startup.sh): pick webcams by id rather than /dev/video0

* feat: process substitution instead of pipeline for udevadm

* fix(startup.sh): correct timeout

* feat: simplify process killing logic

* feat: add sigkill to startup.sh's peer stop

* feat: Add audio device picker

* feat: Add audio device utils for vnoiconf.sh

* feat: allow glob and manual audio source config

* feat: add comments to regexes in vnoiconf.sh

* feat: pattern matching notes

* feat: move default audio_source for clarity

* chore: Cleanup github workflow jobs

* fix: fix workflow image-toolkit config secret name

* chore: drop root requirement when generating secrets

* feat: Use workaround to gain extra space from github actions

* fix: keep docker cache and image

* feat: Remove IMAGE and ICPC folder in github actions mode

* fix: Reorder github actions remove files

* fix: use different tmp path for gh workflow

--- a/.github/workflows/push-releases.yml
+++ b/.github/workflows/push-releases.yml
@@ -19,6 +19,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 512
+          swap-size-mb: 1024
+          remove-dotnet: 'true'
+          remove-docker-images: 'true'
+          remove-codeql: 'true'
+          remove-haskell: 'true'
+          remove-android: 'true'
+
+      - name: Check free space
+        run: echo "Free space $(df -h /)"
+
       - name: Checkout Repository
         uses: actions/checkout@v3
 
@@ -34,16 +48,10 @@ jobs:
           CONTENT: ${{ secrets.CONFIG_LOCAL_SH }}
           FILENAME: config.local.sh
 
-      - name: Write image-toolkit/config.local.sh
-        run: echo $CONTENT | base64 -d > $FILENAME
-        env:
-          CONTENT: ${{ secrets.SRC_CONFIG_LOCAL_SH }}
-          FILENAME: image-toolkit/config.local.sh
-
       - name: Write image-toolkit/config.sh
         run: echo $CONTENT | base64 -d > $FILENAME
         env:
-          CONTENT: ${{ secrets.SRC_CONFIG_SH }}
+          CONTENT: ${{ secrets.TOOLKIT_CONFIG_SH }}
           FILENAME: image-toolkit/config.sh
 
       - name: Build image
@@ -58,7 +66,7 @@ jobs:
           release_name: ${{ env.image_name }}
           draft: false
           prerelease: false
-      
+
       - name: Split ISO
         run: mkdir iso-parts; split -b 2000MB live-build/contestant.iso iso-parts/contestant
 
