--- a/.github/workflows/push-self-hosted-runner.yml
+++ b/.github/workflows/push-self-hosted-runner.yml
@@ -17,6 +17,20 @@ jobs:
     runs-on: self-hosted
 
     steps:
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 512
+          swap-size-mb: 1024
+          remove-dotnet: 'true'
+          remove-docker-images: 'true'
+          remove-codeql: 'true'
+          remove-haskell: 'true'
+          remove-android: 'true'
+
+      - name: Check free space
+        run: echo "Free space $(df -h /)"
+
       - name: Checkout Repository
         uses: actions/checkout@v3
 
@@ -32,16 +46,10 @@ jobs:
           CONTENT: ${{ secrets.CONFIG_LOCAL_SH }}
           FILENAME: config.local.sh
 
-      - name: Write image-toolkit/config.local.sh
-        run: echo $CONTENT | base64 -d > $FILENAME
-        env:
-          CONTENT: ${{ secrets.SRC_CONFIG_LOCAL_SH }}
-          FILENAME: image-toolkit/config.local.sh
-
       - name: Write image-toolkit/config.sh
         run: echo $CONTENT | base64 -d > $FILENAME
         env:
-          CONTENT: ${{ secrets.SRC_CONFIG_SH }}
+          CONTENT: ${{ secrets.TOOLKIT_CONFIG_SH }}
           FILENAME: image-toolkit/config.sh
 
       - name: Build image
