chore(pam): switch makefile to prod variables

--- a/modules/pam/Makefile
+++ b/modules/pam/Makefile
@@ -5,8 +5,8 @@ CDEF	=	'-DVNOI_ROOT="root"' \
 			'-DVNOI_PASSWD_PROMPT="Password: "' \
 			'-DVNOI_DEFAULT_USERNAME="icpc"' \
 			'-DVNOI_DEFAULT_PASSWORD="icpc"' \
-			'-DVNOI_LOGIN_ENDPOINT="http://localhost:8080/login"' \
-			'-DVNOI_CONFIG_ENDPOINT="http://localhost:8080/config"' \
+			'-DVNOI_LOGIN_ENDPOINT="https://vpn.vnoi.info/auth/auth/login"' \
+			'-DVNOI_CONFIG_ENDPOINT="https://vpn.vnoi.info/user/vpn/config"' \
 			'-DVNOI_WIREGUARD_DIR="/etc/wireguard"' \
 			'-DVNOI_PAM_LOGFILE="/var/log/vnoi_pam.log"'
 
