feat: make pam module configurable

--- a/modules/pam/Makefile
+++ b/modules/pam/Makefile
@@ -1,14 +1,16 @@
+include config.mk
+
 CC		= gcc
 CFLAGS	= -Wall -Wextra -Wpedantic -Werror -Wno-unused-parameter -fPIC -fno-stack-protector
-CDEF	=	'-DVNOI_ROOT="root"' \
-			'-DVNOI_USER_PROMPT="Username: "' \
-			'-DVNOI_PASSWD_PROMPT="Password: "' \
-			'-DVNOI_DEFAULT_USERNAME="icpc"' \
-			'-DVNOI_DEFAULT_PASSWORD="icpc"' \
-			'-DVNOI_LOGIN_ENDPOINT="https://vpn.vnoi.info/auth/auth/login"' \
-			'-DVNOI_CONFIG_ENDPOINT="https://vpn.vnoi.info/user/vpn/config"' \
-			'-DVNOI_WIREGUARD_DIR="/etc/wireguard"' \
-			'-DVNOI_PAM_LOGFILE="/var/log/vnoi_pam.log"'
+CDEF	=	'-DVNOI_ROOT=$(VNOI_ROOT)' \
+			'-DVNOI_USER_PROMPT=$(VNOI_USER_PROMPT)' \
+			'-DVNOI_PASSWD_PROMPT=$(VNOI_PASSWD_PROMPT)' \
+			'-DVNOI_DEFAULT_USERNAME=$(VNOI_DEFAULT_USERNAME)' \
+			'-DVNOI_DEFAULT_PASSWORD=$(VNOI_DEFAULT_PASSWORD)' \
+			'-DVNOI_LOGIN_ENDPOINT=$(VNOI_LOGIN_ENDPOINT)' \
+			'-DVNOI_CONFIG_ENDPOINT=$(VNOI_CONFIG_ENDPOINT)' \
+			'-DVNOI_WIREGUARD_DIR=$(VNOI_WIREGUARD_DIR)' \
+			'-DVNOI_PAM_LOGFILE=$(VNOI_PAM_LOGFILE)'
 
 LD		= ld
 LDFLAGS = -x --shared
@@ -26,4 +28,4 @@ vnoi_pam.so: $(OBJS)
 	$(CC) $(CFLAGS) $(CDEF) -c -o $@ $<
 
 clean:
-	rm *.o vnoi_pam.so
+	rm -f *.o vnoi_pam.so
